4.17/037f03155b7d87e85168b4296516bfda5c9f6380
drm/omap: fix compile error when DPI is disabled

When CONFIG_OMAP2_DSS_DPI is disabled, compilation fails due to:

drivers/gpu/drm/omapdrm/dss/dss.h:388:25: error: conflicting types for ‘port’
     struct device_node *port,
                         ^~~~

Fix this by renaming the first parameter correctly.

Signed-off-by: Tomi Valkeinen <tomi.valkeinen@ti.com>

